--- a/src/components/EventDetails.css
+++ b/src/components/EventDetails.css
@@ -1,33 +1,71 @@
-.textContent{
-    color: aquamarine;
-    align-items: center;
-    -webkit-animation: EventsPopUp_revealSide__jA5SY 1s ease;
-    animation: EventsPopUp_revealSide__jA5SY 2s ease;
-    display: flex;
-    flex-direction: column;
-    font-family: Montserrat,sans-serif;
-    font-weight: 400;
-    height: 90%;
-    align-items: flex-start;
-    overflow-x: hidden;
-    -webkit-transform-origin: 0 50%;
-    transform-origin: 0 50%;
-    transition: all 2s ease;
-    width:48vw;
+.textContent {
+  color: rgba(255, 255, 255, 0.7);
+  align-items: center;
+  -webkit-animation: EventsPopUp_revealSide 1s ease;
+  animation: EventsPopUp_revealSide 0.5s cubic-bezier(0.4, 0, 1, 1);
+  display: flex;
+  flex-direction: column;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  height: 90%;
+  align-items: flex-start;
+  overflow-x: hidden;
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  transition: all 0.5s cubic-bezier(0.4, 0, 1, 1);
+  width: 48vw;
 }
 
-@keyframes  EventsPopUp_revealSide__jA5SY{
-    from {
-        width: 0vw;
-      }
-    
-      to {
-        width: 48vw;
-      }
-}
+@keyframes EventsPopUp_revealSide {
+  from {
+    width: 0vw;
+  }
 
-.popUpText{
+  to {
     width: 48vw;
-    transform-origin: 0 50%;
-    
+  }
+}
+
+.popUpText {
+  width: 48vw;
+  transform-origin: 0 50%;
+}
+
+.textContent[closing] {
+  -webkit-animation: EventsPopUp_closeSide 1s ease;
+  animation: EventsPopUp_closeSide 0.5s cubic-bezier(0.02, 0.01, 0.21, 0.99);
+  overflow-x: hidden;
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  transition: all 0.5s cubic-bezier(0.02, 0.01, 0.21, 0.99);
+  width: 48vw;
+  display: flex;
+  flex-direction: column;
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  height: 90%;
+  align-items: flex-start;
+  color: rgba(255, 255, 255, 0.7);
+  align-items: center;
+}
+
+@keyframes EventsPopUp_closeSide {
+  from {
+    width: 48vw;
+  }
+
+  to {
+    width: 0vw;
+  }
+}
+
+@media screen and (max-width:700px){
+  #event-image{
+    display: none;
+  }
+
+  #popUp{
+    min-height: 350px;
+  }
+  
 }
