--- a/src/components/EventDetails.css
+++ b/src/components/EventDetails.css
@@ -59,29 +59,26 @@
   }
 }
 
-@media screen and (max-width:700px){
-  #event-image{
+#event-image {
+  animation: Rotate_image 0.5s ease-in-out;
+}
+
+@keyframes Rotate_image {
+  from {
+    transform: rotate3d(0, 1, 0, 0deg);
+  }
+
+  to {
+    transform: rotate3d(0, 1, 0, 360deg);
+  }
+}
+
+@media screen and (max-width:700px) {
+  #event-image {
     display: none;
   }
 
   #popUp {
     min-height: 350px;
   }
-}
-
-#popUp {
-  /* background: url(../assets/paper-card.png);
-  background-position: center;
-  background-size: cover;
-  z-index: 55;
-  position: fixed;
-  padding: 1.5rem;
-  font-size: 1.125rem
-    /* 18px 
-  ;
-  line-height: 1.75rem;
-  display: flex;
-  gap: 0.5rem
-    /* 8px 
-  ; */
 }
