--- a/src/constants/carousel.css
+++ b/src/constants/carousel.css
@@ -1,3 +1,18 @@
-.o {
-        transition: ease-in 0.3s;
+.slideshowDots {
+    text-align: center;
+  }
+  .slideshowDot {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 15px 7px 0px;
+    background-color: #c4c4c4;
+  }
+.slideshowSlider{
+    transition: ease 1000ms;
 }
+.slideshowDot.active {
+    background-color: #ad7a0df2;
+  }
