fixed bugs in carousel

--- a/src/constants/carousel.css
+++ b/src/constants/carousel.css
@@ -1,4 +1,8 @@
-.slideshowDots {
+.carousel {
+    margin: 0 auto;
+    text-align: center;
+  }
+  .slideshowDots {
     text-align: center;
   }
   .slideshowDot {
