modified modal and added events details

--- a/src/components/EventDetails.css
+++ b/src/components/EventDetails.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   font-family: Montserrat, sans-serif;
   font-weight: 400;
-  height: 90%;
+  height: 400px;
   align-items: flex-start;
   overflow-x: hidden;
   -webkit-transform-origin: 0 50%;
@@ -29,6 +29,9 @@
 .popUpText {
   width: 48vw;
   transform-origin: 0 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .textContent[closing] {
@@ -43,7 +46,7 @@
   flex-direction: column;
   font-family: Montserrat, sans-serif;
   font-weight: 400;
-  height: 90%;
+  height: 400px;
   align-items: flex-start;
   color: rgba(255, 255, 255, 0.7);
   align-items: center;
@@ -85,21 +88,12 @@
   .image-box{
     display: none;
   }
-}
 
-#popUp {
-  /* background: url(../assets/paper-card.png);
-  background-position: center;
-  background-size: cover;
-  z-index: 55;
-  position: fixed;
-  padding: 1.5rem;
-  font-size: 1.125rem
-    /* 18px 
-  ;
-  line-height: 1.75rem;
-  display: flex;
-  gap: 0.5rem
-    /* 8px 
-  ; */
+  .popUpText{
+    width: 64vw;
+  }
+
+  .textContent{
+    width: 64vw;
+  }
 }
